--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "The savvy cats over at SMART Pump would like to be able to allow users to login to their account, check their balance and update their personal details. Write a simple web application (API and UI) using node.js and lowdb that lets users accomplish those tasks.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "build": "webpack",
+    "dev": "webpack && node index.js",
+    "prod": "NODE_ENV=production webpack && NODE_ENV=production node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,14 +24,15 @@
     "app-root-path": "^3.0.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "client-sessions": "^0.8.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "express-validation": "^3.0.6",
     "helmet": "^4.1.1",
     "http-status": "^1.4.2",
     "joi": "^17.2.1",
     "lowdb": "^1.0.0",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "vue": "^2.6.12",
     "vue-router": "^3.4.6",
     "vuetify": "^2.3.13",
@@ -42,6 +47,28 @@
     "sass": "^1.26.12",
     "sass-loader": "^10.0.2",
     "selenium-server": "^3.141.59",
-    "supertest": "^5.0.0"
+    "supertest": "^5.0.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.0.8",
+    "@mdi/font": "^4.2.95",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "expect": "^25.0.0",
+    "fibers": "^4.0.1",
+    "jsdom": "^11.11.0",
+    "jsdom-global": "^3.0.2",
+    "node-sass": "^4.14.1",
+    "nodemon": "^1.17.5",
+    "style-loader": "^1.0.0",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.6.10",
+    "vue-test-utils": "^1.0.0-beta.11",
+    "webpack-dev-middleware": "^3.2.0"
   }
 }
