Creating login route. Test passing for invalid credentials

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "dev": "webpack && node index.js",
     "prod": "NODE_ENV=production webpack && NODE_ENV=production node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "unit": "mocha ./test/unit/index.js"
   },
   "repository": {
     "type": "git",
