--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^4.1.1",
     "http-status": "^1.4.2",
     "joi": "^17.2.1",
+    "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
@@ -39,17 +40,6 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chromedriver": "^86.0.0",
-    "deepmerge": "^4.2.2",
-    "mocha": "^8.1.3",
-    "nightwatch": "^1.4.3",
-    "sass": "^1.26.12",
-    "sass-loader": "^10.0.2",
-    "selenium-server": "^3.141.59",
-    "supertest": "^5.0.0",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.0.8",
     "@mdi/font": "^4.2.95",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -57,18 +47,30 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
+    "chromedriver": "^86.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "deepmerge": "^4.2.2",
     "expect": "^25.0.0",
     "fibers": "^4.0.1",
     "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
+    "mocha": "^8.1.3",
+    "nightwatch": "^1.4.3",
     "node-sass": "^4.14.1",
     "nodemon": "^1.17.5",
+    "sass": "^1.26.12",
+    "sass-loader": "^10.0.2",
+    "selenium-server": "^3.141.59",
     "style-loader": "^1.0.0",
+    "supertest": "^5.0.0",
+    "supertest-session": "^4.1.0",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.6.10",
     "vue-test-utils": "^1.0.0-beta.11",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.2.0"
   }
 }
